# permutations

./: .gitignore  CMakeLists.txt  README.md
include/permutations/: permutation.hpp
tests/: CMakeLists.txt  permutation_test.cpp
